--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -6,9 +6,14 @@
     left: 0;
     background-color: rgba($color-black, 0.8);
     z-index: 9999;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s;
 
     &__content {
-        @include absCenter;
+        position: absolute;
+        top: 50%;
+        left: 50%;
 
         width: 75%;
         background-color: $color-white;
@@ -16,6 +21,9 @@
         border-radius: 3px;
         display: table;
         overflow: hidden;
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(0.25);
+        transition: all 0.5s 0.2s;
     }
 
     &__left {
@@ -46,5 +54,34 @@
         -webkit-hyphens: auto;
         -moz-hyphens: auto;
         hyphens: auto;
+    }
+
+    &:target {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    &:target &__content {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    &__close {
+        &:link,
+        &:visited {
+            color: $color-grey-dark;
+            position: absolute;
+            top: 2.5rem;
+            right: 2.5rem;
+            font-size: 3rem;
+            text-decoration: none;
+            display: inline-block;
+            line-height: 1;
+            transition: all 0.2s;
+        }
+
+        &:hover {
+            color: $color-primary;
+        }
     }
 }
