--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
+/* 
+0 - 600 px      Phone
+600 - 900px     Tablet Portrait
+900 - 1200px    Tablet Landscape
+1200 - 1800     NORMAL STYLES
+1800 - :        Big Desktop
+*/
+/*
+$breakpoint argument choices:
+ - phone
+ - tab-port
+ - tab-land
+ - big-desktop
+*/
 *,
 *::after,
 *::before {
@@ -7,6 +21,15 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box; }
