--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,7 +7,20 @@
 }
 
 html {
-    font-size: 62.5%;
+    // This defines what 1rem is
+    font-size: 62.5%; // 1rem = 10px; 10px/16px = 0.625
+
+    @include respond(tab-land) {
+        font-size: 56.25%; // 1rem = 9px; 9/16 * 100 = 56.25%
+    }
+
+    @include respond(tab-port) {
+        font-size: 50%; // 1rem = 8px; 8/16 * 100 = 50%
+    }
+
+    @include respond(big-desktop) {
+        font-size: 75%; // 1rem = 12px; 12/16 * 100 = 75%
+    }
 }
 
 body {
