--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body {
     // font-size: 16px;
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
 }
 
 .heading-primary {
@@ -26,6 +25,11 @@ body {
 
         // animation-iteration-count: 3;
         // animation-delay: 3s;
+
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
     }
 
     &--sub {
@@ -35,6 +39,10 @@ body {
         letter-spacing: 1.75rem;
 
         animation: moveInRight 1s ease-out;
+
+        @include respond(phone) {
+            letter-spacing: 0.5rem;
+        }
     }
 }
 
@@ -57,6 +65,14 @@ body {
     &:hover {
         transform: skewY(2deg) skewX(15deg) scale(1.1);
         text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+    }
+
+    @include respond(tab-port) {
+        letter-spacing: 3rem;
+    }
+
+    @include respond(phone) {
+        letter-spacing: 1rem;
     }
 }
 
